--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/antd-components",
-  "version": "1.0.79",
+  "version": "1.0.80",
   "main": "dist/main.cjs.js",
   "module": "dist/main.esm.js",
   "types": "dist/main.d.ts",
@@ -51,5 +51,11 @@
     "nanoid": "^4.0.2",
     "react-input-autosize": "^3.0.0",
     "sortablejs": "^1.15.0"
-  }
+  },
+  "keywords": [
+    "ant",
+    "antd",
+    "components",
+    "react"
+  ]
 }
