--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -14,10 +14,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@jswork/antd-components": "^1.0.0",
     "@jswork/next": "^1.2.2",
     "@jswork/next-replace-in-file": "^1.0.0",
     "@jswork/presets-tailwind": "^1.1.8",
-    "@jswork/antd-components": "^1.0.0",
     "@jswork/simple-date-format": "^1.0.5",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.5",
+    "dayjs": "^1.11.12",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
