--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
     "cssnano": "^6.0.1",
+    "esbuild-plugin-copy": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsup": "^7.2.0",
