--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/antd-components",
-  "version": "1.0.82",
+  "version": "1.0.83",
   "main": "dist/main.cjs.js",
   "module": "dist/main.esm.js",
   "types": "dist/main.d.ts",
@@ -55,6 +55,7 @@
     "ant",
     "antd",
     "components",
-    "react"
+    "react",
+    "deprecated"
   ]
 }
