--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,41 +1,26 @@
 {
-  "name": "example",
-  "private": true,
-  "version": "1.0.0",
+  "name": "antd-components-example",
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@astrojs/check": "^0.5.8",
+    "@astrojs/starlight": "^0.24.5",
+    "@astrojs/starlight-tailwind": "^2.0.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.10.2",
+    "sharp": "^0.32.5",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@jswork/antd-components": "^1.0.0",
-    "@jswork/next": "^1.2.2",
-    "@jswork/next-replace-in-file": "^1.0.0",
     "@jswork/presets-tailwind": "^1.1.8",
-    "@jswork/simple-date-format": "^1.0.5",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.10.5",
-    "dayjs": "^1.11.12",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "indent-string": "^5.0.0",
-    "postcss": "^8.4.38",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "sass": "^1.76.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "starlight-image-zoom": "^0.6.0"
   }
 }
