--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/antd-components",
-  "version": "1.0.86",
+  "version": "1.0.88",
   "main": "dist/main.cjs.js",
   "module": "dist/main.esm.js",
   "types": "dist/main.d.ts",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@jswork/harmony-events": "^1.2.1",
+    "@jswork/next": "^1.2.2",
     "@swc/core": "^1.3.93",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
