--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "antd": "^5.20.0",
+    "dayjs": "^1.11.12",
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
     "cssnano": "^6.0.1",
