--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "antd-components-example",
+  "name": "antd-components-docs",
+  "version": "0.0.0",
   "type": "module",
-  "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "vocs dev",
+    "build": "vocs build",
+    "preview": "vocs preview"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.8",
-    "@astrojs/starlight": "^0.24.5",
-    "@astrojs/starlight-tailwind": "^2.0.3",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.10.2",
-    "sharp": "^0.32.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2"
-  },
-  "devDependencies": {
-    "@jswork/presets-tailwind": "^1.1.8",
-    "starlight-image-zoom": "^0.6.0"
+    "@types/react": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "typescript": "latest",
+    "vocs": "latest",
+    "@jswork/antd-components": "^1.0.90"
   }
 }
