--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -8,9 +8,10 @@
     "preview": "vocs preview"
   },
   "dependencies": {
-    "@types/react": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "latest",
     "vocs": "latest",
     "@jswork/antd-components": "^1.0.90"
